更新编译脚本 & 添加"."绑定